--- a/0-index.html
+++ b/0-index.html
@@ -15,10 +15,10 @@
   <!---- upper Header -->
   <header class="header">
     <div class="logo">
-       <div class="favicon-container">
-         <img clas="logo 1" src="C:\Users\PC\mambo\headphones\images\faviconsmall.png" alt="Favicon" />
+       <div class="upper-header-container">
+         <img class="logo 1" src="C:\Users\PC\mambo\headphones\images\faviconsmall.png" alt="HEADPHONEs" />
     </div>
-           <img class="he-ad-phon-es" src="headphones/images/._logo_headphones.png" alt="HEAdPHONEs"/>
+           <img class="C:\Users\PC\mambo\headphones\images\faviconsmall.png" alt="HEADPHONEs"/>
     </div>
 
       <div class="menu">
