--- a/0-index.html
+++ b/0-index.html
@@ -1,58 +1,180 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-    <title>Homepage - Headphones</title>
-    <meta name="description" content="Description of the page less than 150 characters">
-    <link rel="icon" type="image/png" href="C:\Users\PC\mambo\headphones\images\faviconsmall.png">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Raleway:700&display=swap" rel="stylesheet">
-    <link rel='stylesheet' href='0-styles.css'>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="initial-scale=1, width=device-width" />
+    <link rel="stylesheet" href="0-styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Source Sans Pro:wght@400;700&display=swap"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=SourceSansPro:wght@600&display=swap"
+    />
   </head>
+  <body>
+    <div class="headphones-desktop">
+      <div class="part-5-footer">
+        <div class="footer-background"></div>
+        <div class="headphones-2020">©headphones 2020</div>
+        <img class="logo-icon" alt="" src="./headphone/public/logo.svg" />
 
-  <!---- Header -->
-
-  <!---- upper Header -->
-  <header class="header">
-    <div class="logo">
-       <div class="upper-header-container">
-         <img class="logo 1" src="C:\Users\PC\mambo\headphones\images\faviconsmall.png" alt="HEADPHONEs" />
-    </div>
-           <img class="C:\Users\PC\mambo\headphones\images\faviconsmall.png" alt="HEADPHONEs"/>
-    </div>
-
-      <div class="menu">
-        <div class="what-we-do sourcesanspro-bold-white-12px">what we do</div>
-         <div class="our-results sourcesanspro-bold-white-12px">our results</div>
-          <div class="contact us sourcesanspro-bold-white-12px">contact us</div>
+        <img class="social-icons" alt="" src="./heaphone/public/social-icons.svg" />
       </div>
-</header>
+      <div class="part-4-contact-us">
+        <div class="contact-us">Contact us</div>
+        <div class="input-1">
+          <div class="name">Name</div>
+          <div class="rectangle"></div>
+        </div>
+        <div class="input-2">
+          <div class="name">Email</div>
+          <div class="rectangle"></div>
+        </div>
+        <div class="input-3">
+          <div class="name">Your message</div>
+          <div class="rectangle"></div>
+        </div>
+        <div class="button">
+          <div class="button-background"></div>
+          <b class="call-to-action">CALL TO ACTION</b>
+        </div>
+      </div>
+      <div class="part-3-dark">
+        <img class="background-icon" alt="" src="./headphone/public/background@2x.png" />
 
+        <div class="our-results-speak">Our results speak for themselves</div>
+        <div class="lorem-ipsum-dolor">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat. Duis aute irure dolor in
+          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur.
+        </div>
+        <div class="dot-1">
+          <img
+            class="polygon-copy-icon"
+            alt=""
+            src="./headphone/public/polygon-copy.svg"
+          />
 
-  <head class="header" headphones section="dark">
-    <div class="x01-headphones-desktop screen">
-       <div class="overlap-group6">
-           <div class="overlap-group5">
-               <div class="text-1">
-                  <h1> <p class="lorem-ipsum-dolor-se lorem-dolor-1">  lorem ipsum dolor set amet lorem ipsum</p></h1>
-                   <h3><p class="lorem-ipsum-dolor-se-copy">  lorem ipsum dolor set amet lorem ipsum dolor set</p></h3>
-                   <div class="button">
-                       <div class="overlap-group">
-                           <div class="call-to-action sourcesanspro-bold-white-14px">CALL TO ACTION</div>
-                       </div>
-                   </div>
-                   <p class="lorem-ipsum-dolor-si-1 lorem-ipsum-dolor-si2 sourcesanspro-normal-white-16px"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-               </div>
-           </div>
-           <p class="lorem-ipsum-dolor-si-1 lorem-ipsum-dolor-si2 sourcesanspro-normal-white-16px"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-           </p>
-       </div>
-       </div>
-       </head>
+          <div class="lorem-ipsum-dolor1">Lorem ipsum dolor</div>
+          <b class="b">+2%</b>
+        </div>
+        <div class="dot-2">
+          <img
+            class="polygon-copy-icon"
+            alt=""
+            src="./headphone/public/polygon-copy.svg"
+          />
 
-  
+          <div class="lorem-ipsum-dolor1">Lorem ipsum dolor</div>
+          <b class="b">+2%</b>
+        </div>
+        <div class="dot-3">
+          <img
+            class="polygon-copy-icon"
+            alt=""
+            src="./headphone/public/polygon-copy.svg"
+          />
 
+          <div class="lorem-ipsum-dolor1">Lorem ipsum dolor</div>
+          <b class="b">+2%</b>
+        </div>
+        <div class="dot-4">
+          <img
+            class="polygon-copy-icon"
+            alt=""
+            src="./headphone/public/polygon-copy.svg"
+          />
 
+          <div class="lorem-ipsum-dolor1">Lorem ipsum dolor</div>
+          <b class="b">+2%</b>
+        </div>
+      </div>
+      <div class="part-2-icons">
+        <div class="ic-01">
+          <div class="lorem-ipsum-dolor5">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          </div>
+          <div class="lorem-ipsum">Lorem ipsum</div>
+          <img
+            class="sound-frecuency-icon"
+            alt=""
+            src="./headphone/public/soundfrecuency.svg"
+          />
+        </div>
+        <div class="ic-02">
+          <div class="lorem-ipsum-dolor6">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          </div>
+          <div class="lorem-ipsum1">Lorem ipsum</div>
+          <img class="video-icon" alt="" src="./headphone/public/video.svg" />
+        </div>
+        <div class="ic-03">
+          <div class="lorem-ipsum-dolor7">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          </div>
+          <div class="lorem-ipsum2">Lorem ipsum</div>
+          <img class="music-icon" alt="" src="./headphone/public/music.svg" />
+        </div>
+        <div class="ic-04">
+          <div class="lorem-ipsum-dolor5">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          </div>
+          <div class="lorem-ipsum">Lorem ipsum</div>
+          <img class="hearing-icon" alt="" src="./headphone/public/hearing.svg" />
+        </div>
+      </div>
+      <div class="part-1-what-we-do">
+        <div class="what-we-do">What we do…</div>
+        <div class="lorem-ipsum-dolor9">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat. Duis aute irure dolor in
+          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur.
+        </div>
+      </div>
+      <div class="main-part">
+        <img
+          class="background-icon1"
+          alt=""
+          src="./headphone/public/background1@2x.png"
+        />
 
-
-
+        <div class="text">
+          <b class="lorem-ipsum-dolor10"
+            >Lorem ipsum dolor set amet lorem ipsum</b
+          >
+          <b class="lorem-ipsum-dolor11"
+            >Lorem ipsum dolor set amet lorem ipsum dolor set</b
+          >
+          <div class="lorem-ipsum-dolor12">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat. Duis aute irure dolor in
+            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+            pariatur.
+          </div>
+          <div class="button1">
+            <div class="button-background"></div>
+            <b class="call-to-action">CALL TO ACTION</b>
+          </div>
+        </div>
+      </div>
+      <div class="header">
+        <div class="menu">
+          <b class="what-we-do1">what we do</b>
+          <b class="our-results">our results</b>
+          <b class="contact-us1">contact us</b>
+        </div>
+        <img class="logo-icon1" alt="" src="./headphone/public/logo.svg" />
+      </div>
+    </div>
+  </body>
+</html>
